tests/extensions/mime/errors/extracttext-novar.sieve
require "extracttext";
require "foreverypart";

foreverypart {
	extracttext "frop";
}
